--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- 
+  DESVIO.ART BY ALINE MARTINEZ – 2021 – ALINEMARTINEZ.IO
+  CODE BY WALIDVB.COM
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,17 +18,26 @@
       font-size: 18px;
       display: grid;
       place-content: center;
-      max-height: 100vh;
-      max-width: 100vw;
+      min-height: 100vh;
+      min-width: 100vw;
       margin: 0;
     }
     body{
       padding: 2rem;
     }
     .qr{
-      width: 100%;
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
       content: fill;
+    }
+    @media (max-width: 767px){
+      body{
+        align-content: start;
+      }
+      .qr{
+        margin-top: 2rem;
+        width: 100%;
+      }
     }
   </style>
 </head>
